--- a/a_1.html
+++ b/a_1.html
@@ -146,7 +146,7 @@ With these points in mind I will re-invoke A<B>o</B>u-iao-a<B>o</B>u again.</UL>
 
 <BR><BR><HR>
 <font size=2><center>
-<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Zintel Frater 999'.' | All Rights Reserved</i></center></font>
+<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Z Frater 999'.' | All Rights Reserved</i></center></font>
 <HR><BR>
 <marquee><img src="dee2.jpg"></marquee><BR>
 
