--- a/a_3.html
+++ b/a_3.html
@@ -130,7 +130,7 @@
 
 <BR><BR><HR>
 <font size=2><center>
-<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Zintel Frater 999'.' | All Rights Reserved</i></center></font>
+<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Z Frater 999'.' | All Rights Reserved</i></center></font>
 <HR><BR>
 <marquee><img src="dee2.jpg"></marquee><BR>
 
