--- a/b_1.html
+++ b/b_1.html
@@ -14,25 +14,25 @@
 
 <U><P>04-06-98ev [Day of Luna]</P>
 
-<P>2311hrs</U> In the Cave, Seminole Heights, Terra Flores. Temple as usual [see illustration 7] but with H.O.O.R. c….&amp; b…..set up. s.…&amp;pi….in East. Begun at <U>2331hrs.</P>
+<P>2311hrs</U> In the Cave, Seminole Heights, Terra Flores. Temple as usual [see illustration 7] but with H.O.O.R. câ€¦.&amp; bâ€¦..set up. s.â€¦&amp;piâ€¦.in East. Begun at <U>2331hrs.</P>
 
 </U><P>Will robe and seal [checkmark]</P>
 <P>Will Banish via <B>XXV</B> [checkmark]</P>
 <P>Will Invoke via <B>V</B> [checkmark]</P>
-<P>Will Invoke via Hexagram of Mercury, <I>deosil revolutions.</I> (toward Boleskine) and read verse I of <B>231</B>, over Western <B>671</B> Alter—then Invoke Sigil over <B>671
+<P>Will Invoke via Hexagram of Mercury, <I>deosil revolutions.</I> (toward Boleskine) and read verse I of <B>231</B>, over Western <B>671</B> Alterâ€”then Invoke Sigil over <B>671
 </B> Alter using mantra-name of Be<B>o</B></FONT><FONT FACE="Symbol" SIZE=4>qaoooa</FONT><FONT FACE="Arial" SIZE=3>bitom.</P>
 <P>
        </P>
 <P>Vision:</P>
 
-<P>Saw Hexagram of Mercury—opened—inside is seal. Drew, intoned name.</P>
+<P>Saw Hexagram of Mercuryâ€”openedâ€”inside is seal. Drew, intoned name.</P>
 <P>Heard Voice: &quot;What do <I>you</I> want?&quot;</P>
 
-<P>Seer mistrusted such a quick response. Drew Banishing Hexagram of Mercury— False! Intoned again, genie name. </P>
+<P>Seer mistrusted such a quick response. Drew Banishing Hexagram of Mercuryâ€” False! Intoned again, genie name. </P>
 
-<P>Saw Jester, juggling galaxies &amp; (?) Solar systems….he laughed &amp; said: "What can<I> I</I> do for you?"</P>
+<P>Saw Jester, juggling galaxies &amp; (?) Solar systemsâ€¦.he laughed &amp; said: "What can<I> I</I> do for you?"</P>
 
-<P>Tested with Banishing Hexagram of Mercury—melted. Saw black, drew geni seal over it, intoning name (become automatic mantra by now);</P>
+<P>Tested with Banishing Hexagram of Mercuryâ€”melted. Saw black, drew geni seal over it, intoning name (become automatic mantra by now);</P>
 
 <P>Seer: &quot;Show the geni.&quot;</P>
 
@@ -50,19 +50,19 @@
 
 <P>Voice: &quot;Removing Change.&quot;</P>
 
-<P>Seer assumed H[oor]P[aar]K[raat] &amp; wrote this. Will re-invoke now. Did so… Lots of garbage, passed through with lots of testing. After mantra &amp; Seal were objects of sustained dharana, seer asked if symbol on right was yoni and left was lingam.</P>
+<P>Seer assumed H[oor]P[aar]K[raat] &amp; wrote this. Will re-invoke now. Did soâ€¦ Lots of garbage, passed through with lots of testing. After mantra &amp; Seal were objects of sustained dharana, seer asked if symbol on right was yoni and left was lingam.</P>
 
-<P>Voice: &quot;Yes—this is apparent from the illustration.&quot;</P>
+<P>Voice: &quot;Yesâ€”this is apparent from the illustration.&quot;</P>
 
 <P>Seer asked if the symbol in the centre was their product.</P>
 
 <P>Voice: &quot;Silence is the reconciler between them.&quot;</P>
 
-<P>Seer tested with Banishing Hexagram of Mercury; crumbled. Saw all as projections of personality. Commanded, drawing Invoking Unicursal Hexagram of the Beast in the name Therion, for the geni to show itself. Saw woman in tattered robe, blue lips—corpse-like. Not mouthing the words, [she] said &quot;here I am.&quot;</P>
+<P>Seer tested with Banishing Hexagram of Mercury; crumbled. Saw all as projections of personality. Commanded, drawing Invoking Unicursal Hexagram of the Beast in the name Therion, for the geni to show itself. Saw woman in tattered robe, blue lipsâ€”corpse-like. Not mouthing the words, [she] said &quot;here I am.&quot;</P>
 
-<P>Then tested via Banishing Hexagram of Mercury—saw H.Mor.—girl from work—Banished via Hexagram of Mercury—remained! She smiled.  Banished again, via Hexagram of Mercury—remained! She threw her head back in laughter. She said: &quot;I speak through this Other.&quot; Tested,  remained.</P>
+<P>Then tested via Banishing Hexagram of Mercuryâ€”saw H.Mor.â€”girl from workâ€”Banished via Hexagram of Mercuryâ€”remained! She smiled.  Banished again, via Hexagram of Mercuryâ€”remained! She threw her head back in laughter. She said: &quot;I speak through this Other.&quot; Tested,  remained.</P>
 
-<P>Seer: &quot;Very well…illustrate your true form.&quot;</P>
+<P>Seer: &quot;Very wellâ€¦illustrate your true form.&quot;</P>
 
 <P>Voice: &quot;Form is abrogate.&quot;</P>
 
@@ -74,12 +74,12 @@
 
 <P>Voice: &quot;Exactly.&quot;</P>
 
-<P>Tested—saw mud with rotten flesh mixed in. It formed into a face—</P>
+<P>Testedâ€”saw mud with rotten flesh mixed in. It formed into a faceâ€”</P>
 <P>Banished via Hexagram of Mercury. </P>
 
 <P>Eyes opened in face, it said: &quot;No. It will not absolve thee.&quot;</P>
 
-<P>Seer told it to be quiet—drew seal/sigil, intoning name. Briefly saw myself in a long pillar’d hall. Walls became yoni on right, phallus on left— from geni sigil. I was the symbol in the centre:</P>
+<P>Seer told it to be quietâ€”drew seal/sigil, intoning name. Briefly saw myself in a long pillarâ€™d hall. Walls became yoni on right, phallus on leftâ€” from geni sigil. I was the symbol in the centre:</P>
 
 <P>&nbsp;</P>
 <B><P ALIGN="CENTER">{Insert Illus.8}</P>
@@ -90,7 +90,7 @@
 
 <P>Seer: &quot;How shall I juggle the complexities of life?&quot;</P>
 
-<P>Voice: &quot;Prepare for penetration, then yield—(other voices like a ‘wire-crossing’ effect interrupted. </P>
+<P>Voice: &quot;Prepare for penetration, then yieldâ€”(other voices like a â€˜wire-crossingâ€™ effect interrupted. </P>
 
 <P>Seer re-invokes.</P>
 
@@ -98,21 +98,21 @@
 
 <P>Tested with Invoking Hexagram of Mercury. [Geni] Repeated the same thing, remaining. Wrote this.</P>
 
-<I><P>(Remembered that at some point geni ‘as H.’ told me the Seal was of the Beast and  &quot;your Lady&quot;…I asked &quot;why is it just </I>my<I> lady? Is she not of us all?&quot; Voice said &quot;She &amp; He are NOT of ME…but thou art for me, and I for thee.&quot; then tested &amp; saw mud, as written [above].)</P>
+<I><P>(Remembered that at some point geni â€˜as H.â€™ told me the Seal was of the Beast and  &quot;your Lady&quot;â€¦I asked &quot;why is it just </I>my<I> lady? Is she not of us all?&quot; Voice said &quot;She &amp; He are NOT of MEâ€¦but thou art for me, and I for thee.&quot; then tested &amp; saw mud, as written [above].)</P>
 </I>
-<P>Assumed H[oor]P[aar]K[raat] &amp; acted thus: held dagger to seal, told geni to indwell, that it may assist me in the accomplishment of the Great Work. Felt a sort of ‘quickening’ of thoughts, like a review of all that just occurred. Quickly sealed the seal with Abramelin oil while intoning the name Be<B>o</B></FONT><FONT FACE="Symbol" SIZE=3>qaoooa</FONT><FONT FACE="Arial" SIZE=3>bitom—then put r[ight] hand over it &amp; gave license to depart into therein [!], ‘coming to my aid by word and deed of magick art’</P>
+<P>Assumed H[oor]P[aar]K[raat] &amp; acted thus: held dagger to seal, told geni to indwell, that it may assist me in the accomplishment of the Great Work. Felt a sort of â€˜quickeningâ€™ of thoughts, like a review of all that just occurred. Quickly sealed the seal with Abramelin oil while intoning the name Be<B>o</B></FONT><FONT FACE="Symbol" SIZE=3>qaoooa</FONT><FONT FACE="Arial" SIZE=3>bitomâ€”then put r[ight] hand over it &amp; gave license to depart into therein [!], â€˜coming to my aid by word and deed of magick artâ€™</P>
 
-<P>Heard Voice from ‘in there’ return: &quot;Love is the law, love under will.&quot;</P>
+<P>Heard Voice from â€˜in thereâ€™ return: &quot;Love is the law, love under will.&quot;</P>
 
 <P>Assumed form of H[oor]P[aar]K[raat], intoned ABRAHADABRA. Wrote this.</P>
 <center>
 <P>***************************************************</P>
 
-</center><P>Will now Banish via <B>XXV</B>, astrally. Done <U>04-07-98ev {Mars}. 0041Hhrs</U> total  vision time approximately 23-30/NO…
+</center><P>Will now Banish via <B>XXV</B>, astrally. Done <U>04-07-98ev {Mars}. 0041Hhrs</U> total  vision time approximately 23-30/NOâ€¦
 
 <BR><BR><HR>
 <font size=2><center>
-<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Zintel Frater 999'.' | All Rights Reserved</i></center></font>
+<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Z Frater 999'.' | All Rights Reserved</i></center></font>
 <HR><BR>
 <marquee><img src="dee.jpg"></marquee><BR>
 
