--- a/b_2.html
+++ b/b_2.html
@@ -23,24 +23,24 @@
 
 <P>             <B><I>[Note on opposite page:<br>
             </B>&quot;Good, you are doing it again.<br>
-             You really didn’t get very far with<br>
+             You really didnâ€™t get very far with<br>
               the last one.<br>
-                            939.’.&quot;<B>]<br>
+                            939.â€™.&quot;<B>]<br>
 </B></I>
 
-<P>Started at <U>2130hrs</U>. As above—then remembered to Invoke with Hexagram of Mercury &amp; verse <B>I </B>of<B> 231</B>. Got out seal &amp; placed on Alter. Held dagger to it with physical hand while in dragon asana, facing Alter. In god-form of Mercury, bearing caduceus. </P>
+<P>Started at <U>2130hrs</U>. As aboveâ€”then remembered to Invoke with Hexagram of Mercury &amp; verse <B>I </B>of<B> 231</B>. Got out seal &amp; placed on Alter. Held dagger to it with physical hand while in dragon asana, facing Alter. In god-form of Mercury, bearing caduceus. </P>
 
-<P>Intoned geni name &amp; saw sigil, passed into it, intoned again. Mercury (the god-form) was running on top of a sea of liquid mercury—the sky above was  mercury also. I/Mercurius ran on top of the sea of mercury, in between the two layers (sky/sea).</P>
+<P>Intoned geni name &amp; saw sigil, passed into it, intoned again. Mercury (the god-form) was running on top of a sea of liquid mercuryâ€”the sky above was  mercury also. I/Mercurius ran on top of the sea of mercury, in between the two layers (sky/sea).</P>
 
 <P>Break-thought: &quot;I breathe air.&quot;</P>
-<P>Stopped the god-form in his run—forced self to observe the surrounding area— intoned geni name—now standing on stone plaza…see a pool ahead, about four feet in diameter, a well with no walls. Approached it. Shirtless boy rises from the  liquid inside—I see it is silver liquid—mercury, like the sea earlier. Child rises up to waist, falls out onto plaza like a seal. I see his lower body is reptilian—I point dagger at him and draw Banishing Hexagram of Mercury; his skin becomes scale like… Intoned ARARITA &amp; ALHIM TzBAOTh while drawing a Banishing Hexagram of Mercury; He ‘erects’ slightly, form melts into a toy triceritops—I point dagger at him, intoned geni name—I said &quot;Assume a form proper to communicating with me.&quot; The child/serpent form returned. Drew [ ‘X’ within ‘O’, the Mark of the Beast ] on his forehead, saying &quot;Nuit – Hadit – RaHoorKhuit&quot;. Held dagger to his throat and said: &quot;I am here to obtain communication with the geni—&quot;. Realized I was too severe with &quot;him&quot; so I pointed the dagger at him &amp; intoned geni name—saw sigil of Be<B>o</B></FONT><FONT FACE="Symbol" SIZE=3>qaoooa</FONT><FONT FACE="Arial" SIZE=3>bitom—intoned repeatedly like a mantra.</P>
+<P>Stopped the god-form in his runâ€”forced self to observe the surrounding areaâ€” intoned geni nameâ€”now standing on stone plazaâ€¦see a pool ahead, about four feet in diameter, a well with no walls. Approached it. Shirtless boy rises from the  liquid insideâ€”I see it is silver liquidâ€”mercury, like the sea earlier. Child rises up to waist, falls out onto plaza like a seal. I see his lower body is reptilianâ€”I point dagger at him and draw Banishing Hexagram of Mercury; his skin becomes scale likeâ€¦ Intoned ARARITA &amp; ALHIM TzBAOTh while drawing a Banishing Hexagram of Mercury; He â€˜erectsâ€™ slightly, form melts into a toy triceritopsâ€”I point dagger at him, intoned geni nameâ€”I said &quot;Assume a form proper to communicating with me.&quot; The child/serpent form returned. Drew [ â€˜Xâ€™ within â€˜Oâ€™, the Mark of the Beast ] on his forehead, saying &quot;Nuit â€“ Hadit â€“ RaHoorKhuit&quot;. Held dagger to his throat and said: &quot;I am here to obtain communication with the geniâ€”&quot;. Realized I was too severe with &quot;him&quot; so I pointed the dagger at him &amp; intoned geni nameâ€”saw sigil of Be<B>o</B></FONT><FONT FACE="Symbol" SIZE=3>qaoooa</FONT><FONT FACE="Arial" SIZE=3>bitomâ€”intoned repeatedly like a mantra.</P>
 
-<P>(Some partitioned conciousness , the Operator I assume, realized he was in the Averse temple—held this qlipothic form at bay while [F.F.F.]-above intoned geni name.)</P>
+<P>(Some partitioned conciousness , the Operator I assume, realized he was in the Averse templeâ€”held this qlipothic form at bay while [F.F.F.]-above intoned geni name.)</P>
 
 
 
-<P></B><I>[Note on opposite page by F.F.F.: &quot;Note: during this vision there were fleeting layers of mixed images—   friends, lovers,  associates—which I kept &quot;out&quot; by sending </I></FONT><FONT FACE="Symbol" SIZE=3>IUGGE</FONT><FONT FACE="Arial" SIZE=3>C <I>after them. It worked by defending dharana.&quot;]</P>
-</I><P>Saw astral darkness, saw sigil. Intoned geni name-mantra repeatedly…sigil grew brighter, Saw translucent sphere. </P>
+<P></B><I>[Note on opposite page by F.F.F.: &quot;Note: during this vision there were fleeting layers of mixed imagesâ€”   friends, lovers,  associatesâ€”which I kept &quot;out&quot; by sending </I></FONT><FONT FACE="Symbol" SIZE=3>IUGGE</FONT><FONT FACE="Arial" SIZE=3>C <I>after them. It worked by defending dharana.&quot;]</P>
+</I><P>Saw astral darkness, saw sigil. Intoned geni name-mantra repeatedlyâ€¦sigil grew brighter, Saw translucent sphere. </P>
 
 </I><P>(In the meantime, [F.F.F.]-below asked the well-child: &quot;What is the vessal of quick-silver?&quot;</P>
 
@@ -50,7 +50,7 @@
 
 <P>Child: &quot;Thy mind: it is the vessal of All Things.&quot;)</P>
 </I>
-<P>While this conversation took place [F.F.F.]-above entered the sphere by placing the sigil of the geni upon it, which he entered through (the vesica pisces). Walked on inner surface of sphere, in god-form of Mercury. ‘Sensed’ geni here. Intoned name, Be<B>o</B></FONT><FONT FACE="Symbol" SIZE=3>qaoooa</FONT><FONT FACE="Arial" SIZE=3>bitom. </P>
+<P>While this conversation took place [F.F.F.]-above entered the sphere by placing the sigil of the geni upon it, which he entered through (the vesica pisces). Walked on inner surface of sphere, in god-form of Mercury. â€˜Sensedâ€™ geni here. Intoned name, Be<B>o</B></FONT><FONT FACE="Symbol" SIZE=3>qaoooa</FONT><FONT FACE="Arial" SIZE=3>bitom. </P>
 
 <P>Voice: &quot;I am he.&quot;</P>
 
@@ -58,7 +58,7 @@
 
 <P>Voice: &quot;I am He, the Bornless one, having sight in the feet.&quot;</P>
 
-<P>Seer: Drew Banishing Hexagram of Mercury, remained. Saw sigil of geni as a three-dimensional sculpture—  <B>[insert illus.8] </B>in background, <B>[insert illust.9] </B>standing on right of <B>[insert illust.8]</B>,<B> [insert illust.10]</B> standing on left—all were stationed upon the three corners of a triangle that lay flat upon the ground.</P>
+<P>Seer: Drew Banishing Hexagram of Mercury, remained. Saw sigil of geni as a three-dimensional sculptureâ€”  <B>[insert illus.8] </B>in background, <B>[insert illust.9] </B>standing on right of <B>[insert illust.8]</B>,<B> [insert illust.10]</B> standing on leftâ€”all were stationed upon the three corners of a triangle that lay flat upon the ground.</P>
 
 
 <B><P ALIGN="CENTER">[Insert Illust.11]</P>
@@ -72,64 +72,64 @@
 
 <P>Voice: &quot;[Laughter, amused.]&quot;</P>
 
-</FONT></B><I><FONT FACE="Arial" SIZE=3><P>*It is interesting to note the misspelling of ‘pyramid’ in the origonal log—though the shape was not even a true pyramid—that is, square base with four triangle sides—the Seer chose this word pyrami</I>n<I>d,  it’s misspelling  perhaps denoting  a subliminal play upon the geni’s name.   Editor, 01-09-99ev.</P>
+</FONT></B><I><FONT FACE="Arial" SIZE=3><P>*It is interesting to note the misspelling of â€˜pyramidâ€™ in the origonal logâ€”though the shape was not even a true pyramidâ€”that is, square base with four triangle sidesâ€”the Seer chose this word pyrami</I>n<I>d,  itâ€™s misspelling  perhaps denoting  a subliminal play upon the geniâ€™s name.   Editor, 01-09-99ev.</P>
 </I></FONT><FONT FACE="Arial" SIZE=3>
 
-<P>Seer: [Holding dagger aloft:] &quot;Give me the knowledge of the glamour of the illusion of the Magus—how it fits into my task?&quot;</P>
+<P>Seer: [Holding dagger aloft:] &quot;Give me the knowledge of the glamour of the illusion of the Magusâ€”how it fits into my task?&quot;</P>
 
-<P>Voice: &quot;REFLECTIONreflectionREFLECTIONreflectionREFLECTIONreflectionREFLECTIONreflection…&quot;(continues at fast speed.) </P>
+<P>Voice: &quot;REFLECTIONreflectionREFLECTIONreflectionREFLECTIONreflectionREFLECTIONreflectionâ€¦&quot;(continues at fast speed.) </P>
 
-<P>Seer: &quot;Slow down!&quot; (Banishes Mercury via Hexagram) &quot;…are you speaking of Nothing under it’s three forms?&quot;</P>
+<P>Seer: &quot;Slow down!&quot; (Banishes Mercury via Hexagram) &quot;â€¦are you speaking of Nothing under itâ€™s three forms?&quot;</P>
 
-<P>Voice: (Addresses god-form) &quot;Thou art the GOER—that which is moved—the Unmoved.&quot;</P>
+<P>Voice: (Addresses god-form) &quot;Thou art the GOERâ€”that which is movedâ€”the Unmoved.&quot;</P>
 
-<P>Seer Banishes via Hexagram of Mercury—sentence of voice repeats. Seer Banishes fully via Hexagram of Mercury, ARARITA &amp; ALHIM TzBAOTh.</P>
+<P>Seer Banishes via Hexagram of Mercuryâ€”sentence of voice repeats. Seer Banishes fully via Hexagram of Mercury, ARARITA &amp; ALHIM TzBAOTh.</P>
 
-<P>Voice: &quot;I am he…the Bornless one. I am Thou, as it was in New Orleans.&quot;</P>
+<P>Voice: &quot;I am heâ€¦the Bornless one. I am Thou, as it was in New Orleans.&quot;</P>
 
-<P>Seer: &quot;B…….!O…….! &quot; Draws Banishing Hexagram of Mercury, [and says]: &quot;What has this to do with New Orleans? I am not him!&quot; (Seer thought geni was trying to flatter the Operator.)</P>
+<P>Seer: &quot;Bâ€¦â€¦.!Oâ€¦â€¦.! &quot; Draws Banishing Hexagram of Mercury, [and says]: &quot;What has this to do with New Orleans? I am not him!&quot; (Seer thought geni was trying to flatter the Operator.)</P>
 
-<P>Voice: &quot;Thou art That—<U>he</U> is That—the Beast is everywhere, as I am everywhere. Because thou wast the knower, am* ME.&quot;</P>
+<P>Voice: &quot;Thou art Thatâ€”<U>he</U> is Thatâ€”the Beast is everywhere, as I am everywhere. Because thou wast the knower, am* ME.&quot;</P>
 
-<I><P>(Note: In [Frater] Zarathustra’s E.Q., M=6, E=5…6+5=11. 1+1=2, or [Hebrew letter] Beth. 11nth path is the number 1.)</P>
+<I><P>(Note: In [Frater] Zarathustraâ€™s E.Q., M=6, E=5â€¦6+5=11. 1+1=2, or [Hebrew letter] Beth. 11nth path is the number 1.)</P>
 </I><P>Seer Invoked Mercury via Hexagram. Some sort of quickening/rush in the &quot;sky&quot; of the Sphere. Seer said &quot;Instruct me in the art of the Beast.&quot; (Drew Invoking Unicursal Hexagram of the Beast.)</P>
 
 <P>Voice: &quot;Hahaha! <I><U>You?</I></U>&quot;</P>
 
-<P>Seer, in angry tone: &quot;I command thee to Obey!&quot; (Drew Banishing Hexagram of Mercury, intoned geni’s name &amp; drew sigil [of geni] in Hexagram.) &quot;In the name of Therion [vibrated], instruct, no, give me a verbal statement that will assist me in the Accomplishment of the Great Work.&quot;</P>
+<P>Seer, in angry tone: &quot;I command thee to Obey!&quot; (Drew Banishing Hexagram of Mercury, intoned geniâ€™s name &amp; drew sigil [of geni] in Hexagram.) &quot;In the name of Therion [vibrated], instruct, no, give me a verbal statement that will assist me in the Accomplishment of the Great Work.&quot;</P>
 
-<P>Voice: &quot;Be thou as a gentle flower on a manicured lawn…this will assist thee in thine Art.&quot;</P>
+<P>Voice: &quot;Be thou as a gentle flower on a manicured lawnâ€¦this will assist thee in thine Art.&quot;</P>
 
 <P>Seer: &quot;Repeat please.&quot; (voice does so, Seer tests with Banishing Hexagram of Mercury, placing [geni] sigil in center.) Remained.</P>
 
 <P>Voice: &quot;Thy pylon is fresh, a thing untouched. Fix it to thy flower.&quot;</P>
 
 </B><I>
-<P>*Note: &quot;…wast the knower, </I>am <I>ME&quot; is a misquote of </I>Liber AL<I> ch.II. The Seer does not recall if this was a pun by the geni or if it is a scribal error. Either way, the Editor found it punny.     Editor, 01-09-99ev.</P>
+<P>*Note: &quot;â€¦wast the knower, </I>am <I>ME&quot; is a misquote of </I>Liber AL<I> ch.II. The Seer does not recall if this was a pun by the geni or if it is a scribal error. Either way, the Editor found it punny.     Editor, 01-09-99ev.</P>
 </I>
-<P>Seer: &quot;What has my ‘flower’ got to do with my ‘pylon’?&quot;</P>
+<P>Seer: &quot;What has my â€˜flowerâ€™ got to do with my â€˜pylonâ€™?&quot;</P>
 
 <P>Voice: &quot;<B>Liber XXVII</B>, which reflecteth mercury into the lowest world.&quot;</P>
 
-<P>Seer tested with Banishing Unicursal Hexagram of the Beast—</P>
+<P>Seer tested with Banishing Unicursal Hexagram of the Beastâ€”</P>
 
 <P>Voice repeated but louder, adding: &quot;I am HE, having sight in the feet.&quot;</P>
 
 <P>Seer: &quot;Thank you.&quot;</P>
 
-<P>Voice: &quot;Anytime—In fact, ye should come here more often. Practice the (Neophyte’s) art daily. Invoke us often.&quot;</P>
+<P>Voice: &quot;Anytimeâ€”In fact, ye should come here more often. Practice the (Neophyteâ€™s) art daily. Invoke us often.&quot;</P>
 
-Seer <I>strongly</I> sensed his own ego having said the last sentence, but took the advice as wisdom nevertheless. Then, it dawned on him—A[leister]C[rowley]’s invocation in New Orleans, of Mercury—&quot;he&quot; said &quot;Mercurius Sum&quot;, I think, or &quot;I am Hermes.&quot; The geni <I>is</i>This mercurial reflector on a lower level (Hod) and he’s been trying to tell me He is in Me And I in Him.</P>
-Found myself (astral body) back in cave-temple facing Boleskine, standing on N.E. corner of Circle…stood there in hesitation, as if waking up from amnesia. Turned toward GVPh (to face S.West) &amp; saw body in asana in front of Alter. Leapt into the body quite playfully. Eyes opened—Assumed H[oor]P[aar]K[raat], put hand on Seal before me on Alter, gave license for geni to dwell therein—intoned [geni] name &amp; ‘felt’ <I>something</I> like a Rush of subtle energy pass into my back, through my arm (right) through hand/dagger, 
+Seer <I>strongly</I> sensed his own ego having said the last sentence, but took the advice as wisdom nevertheless. Then, it dawned on himâ€”A[leister]C[rowley]â€™s invocation in New Orleans, of Mercuryâ€”&quot;he&quot; said &quot;Mercurius Sum&quot;, I think, or &quot;I am Hermes.&quot; The geni <I>is</i>This mercurial reflector on a lower level (Hod) and heâ€™s been trying to tell me He is in Me And I in Him.</P>
+Found myself (astral body) back in cave-temple facing Boleskine, standing on N.E. corner of Circleâ€¦stood there in hesitation, as if waking up from amnesia. Turned toward GVPh (to face S.West) &amp; saw body in asana in front of Alter. Leapt into the body quite playfully. Eyes openedâ€”Assumed H[oor]P[aar]K[raat], put hand on Seal before me on Alter, gave license for geni to dwell thereinâ€”intoned [geni] name &amp; â€˜feltâ€™ <I>something</I> like a Rush of subtle energy pass into my back, through my arm (right) through hand/dagger, 
 Into seal. Quickly picked up oil [of Abramelin] &amp; anointed seal while intoning [geni] name.</P>
-Stood up &amp; went before the H.O.O.R. b…..erect in the East—did Greek Exorcism, Greek
-Qab[alistic] Cross &amp; Greek Exorcism. Used butt of blade to knock on s…., [333-55555-
-333], then held dagger to heart—intoned ABRAHADABRA. Wrote this. Ended <U>2319hrs</U>.
+Stood up &amp; went before the H.O.O.R. bâ€¦..erect in the Eastâ€”did Greek Exorcism, Greek
+Qab[alistic] Cross &amp; Greek Exorcism. Used butt of blade to knock on sâ€¦., [333-55555-
+333], then held dagger to heartâ€”intoned ABRAHADABRA. Wrote this. Ended <U>2319hrs</U>.
 
 
 <BR><BR><HR>
 <font size=2><center>
-<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Zintel Frater 999'.' | All Rights Reserved</i></center></font>
+<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Z Frater 999'.' | All Rights Reserved</i></center></font>
 <HR><BR>
 <marquee><img src="dee.jpg"></marquee><BR>
 
