--- a/b_menu.html
+++ b/b_menu.html
@@ -20,7 +20,7 @@
 
 <BR><BR><HR>
 <font size=2>
-<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Zintel Frater 999'.' | All Rights Reserved</i></center></font>
+<i>All Contents Copyright &#169; Anno XC-C/1993-2003ev Joshua Z Frater 999'.' | All Rights Reserved</i></center></font>
 <HR><BR>
 <marquee><img src="dee.jpg"></marquee><BR>
 
