--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Exploration in the Domes of <b>CCXXXI</b><BR>
 
 </FONT><I><FONT FACE="Mercurius Script MT Bold,Courier New" SIZE=1 color=green>Copyright XCVI 1999ev, R. Cabal Press</P>
 <FONT FACE="arial" SIZE=4></I>
-by Frater F.F.F., Joshua Zintel
+by Frater F.F.F., Joshua Z
 <br>edited & annotated by Frater S.<font face="symbol">P</font><FONT FACE="arial" SIZE=4>
 <BR>
 with commentary by Frater 939<font face="symbol">\</font>, Ray Eales<P>
@@ -96,7 +96,7 @@ XCVIII Anno Aiwass
 
 <BR><BR><HR>
 <font size=2>
-<i>All Contents Copyright &#169; Anno XC-XCVIII/1993-2001ev Joshua Zintel Frater 999'.' | All Rights Reserved</i></font>
+<i>All Contents Copyright &#169; Anno XC-CXX/1993-2023ev Joshua Z Frater 999'.' | All Rights Reserved</i></font>
 <HR><BR><BR>
 
 <P>
