--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@ The following documents are the first of eleven pairs to be published, each pair
 on the contrary, they are part of the will of their publication. Beginning students of Astral sight & travel may benefit to see a record of what </i>not<i> to do, and to witness the ever increasing refining of technique and deepening of contact. 
 <P>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;It should also be noted that all known records of other experiments in <b>Liber CCXXXI</b> indicate Operators beginning at the most 'dense' path
-of TAU, the one 'closest' to the realities of MLKVTh... not so with this current record,
-that of the 'hanged beast' 999'.'! He began from the inside-out, starting at ALPh & working
-his way 'down'. With such a journey it has been stated that this may have been a mistake, from the point of view of economy-of-motion-- for the Operator had to get his 'sea-legs' in the refined, subtle and supernal paths rather than in the overt brutality of the Universe. Let success be the proof.
+of TAU, the one 'closest' to the realities of MLKVTh... not so with this current record! It began from the inside-out, starting at ALPh & working 'down'. With such a journey it has been stated that this may have been a mistake, from the point of view of economy-of-motion-- for the Operator had to get his 'sea-legs' in the refined, subtle and supernal paths rather than in the overt brutality of the Universe. Let results be the proof.
 <P></i>
 <font face="symbol">ZOS hua</font>, Priest of the Gnosis Of A.L.<br>
 XCVIII Anno Aiwass
